2004-05-09  Michael Gogins <gogins@pipeline.com>

      * Added high-level "C" API for CsoundVST 
       (frontends/CsoundVST/csoundvst_api.h and .c).

2004-05-07  Michael Gogins <gogins@pipeline.com>

      * Fixed some bugs in rtpa.c to enable lower-latency
        real-time audio.

2004-05-05  Michael Gogins <gogins@pipeline.com>

      * Fixed Fl_graph.cpp and widgets.cpp event handling with 
        thread protection. FLTK widgets work now (at least on
        Windows).
      
2004-05-05  John ffitch  <jpff@codemist.co.uk>

	* strings/all_strings: 
	* strings/english-strings: Heavily revised

	* Top/pvanal.c (pvanal): 1781->1771

	* Engine/oload.c (oload): 1711->1704 as overuse

	* OOps/pvfileio.c (pvoc_readfmt): Minor typo in string
	(pvoc_readheader): 1555 instead of 1635
	(pvoc_putframes): 1527 instead of 1657

	* OOps/pvxanal.c (pvxanal): Minor typo in string

	* Opcodes/scansynx.c Many string renumering for uniqueness

	* OOps/fout.c (outfile_set): 1463->1451 as overuse

	* Opcodes/uggab.c (rsnsety): 1453->1453 as overuse

	* Top/dnoise.c (dnoise): 1198->1199 as overuse
	(dnoise): Minor type in string

	* OOps/diskin.c (newsndinset): Minor string correction

	* OOps/ugrw1.c (printksset): 1136->1135 as overuse

	* Top/dnoise.c (dnoise): Changed 1052 to 1016 as overuse

	* Opcodes/ugmoss.c (vcombset): Unified string 668

	* OOps/cmath.c (seedrand): String 458 made same as other uses

	* Top/argdecode.c (longusage): Typo in 425

	* Opcodes/uggab.c (kDiscreteUserRand, aDiscreteUserRand) 
	(kContinuousUserRand, aContinuousUserRand): Inconsidtent use of
	Strinh 315

	* Opcodes/ugsc.c (phaser2set): String 243 double used -- changed
	to 245

	* OOps/mididevice.c (OpenMIDIDevice): Typo in string 210

	* Top/argdecode.c (decode_long): String 95 was repeated; changed
	to 97 which was free

	* OOps/pvread.c (pvreadset, pvocex_loadfile): 
	* OOps/pvinterp.c (pvbufreadset, pvinterpset, pvcrossset): 
	* OOps/pvadd.c (pvaddset): 